--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "fortawesome/vue-fontawesome",
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "fortawesome": "^0.0.1-security",
     "prettier": "^3.0.0",
     "vite": "^4.4.6"
   }
