--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "firebase-tools": "^12.5.4",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "4"
   },
@@ -17,7 +20,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/vue-fontawesome": "fortawesome/vue-fontawesome",
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
