build: fix build errors

--- a/src/assets/projects/projects.json
+++ b/src/assets/projects/projects.json
@@ -2,13 +2,13 @@
    "list": [
       {
          "name":"gerenciador de senhas",
-         "image":"../src/assets/images/projects/gerenciador-screenshoot.jpg",
+         "image":"/images/projects/gerenciador-screenshoot.jpg",
          "description": "Um gerenciador de senhas simples, utiliza local storage",
          "tecnologias": ["javascript","pinia"]
       },
       {
          "name":"Aleator",
-         "image":"../src/assets/images/projects/aleator.png",
+         "image":"/images/projects/aleator.png",
          "description": "Um projeto que faz sorteios baseado em números que o usuário escolheu de 1 a maximo escolhido, foi utilizado em um sorteio do web-aulão 2020 do Rio Grande do Norte",
          "tecnologias": ["javascript","css"]
       }
