--- a/src/assets/projects/projects.json
+++ b/src/assets/projects/projects.json
@@ -11,6 +11,12 @@
       "image": "/images/projects/aleator.png",
       "description": "Um projeto que faz sorteios baseado em números que o usuário escolheu de 1 a maximo escolhido, foi utilizado em um sorteio do web-aulão 2020 do Rio Grande do Norte",
       "tecnologias": ["javascript", "css","html"]
+    },
+    {
+      "name": "GetMidia",
+      "image": "/images/projects/getMidia.png",
+      "description": "Projeto que utiliza a api tmdb para exibir ao usuário uma lista com imagens e descrição de todos os filmes séries e animes",
+      "tecnologias": ["javascript", "react","styled-components","axios"]
     }
   ]
 }
