--- a/src/assets/projects/projects.json
+++ b/src/assets/projects/projects.json
@@ -17,6 +17,13 @@
       "image": "/images/projects/getMidia.png",
       "description": "Projeto que utiliza a api tmdb para exibir ao usuário uma lista com imagens e descrição de todos os filmes séries e animes",
       "tecnologias": ["javascript", "react","styled-components","axios"]
+    },
+    {
+      "name": "Sharktech",
+      "image": "/images/projects/sharktech.png",
+      "description": "Frontend da empresa Sharktech, venda do curso da empresa",
+      "tecnologias": ["nextjs", "react","tailwind","typescript"],
+      "link":"https://sharktech.vercel.app/"
     }
   ]
 }
