coffe api github link

--- a/src/assets/projects/projects.json
+++ b/src/assets/projects/projects.json
@@ -33,7 +33,7 @@
       "image":"/images/projects/coffeeAPI.png",
       "description":"api do projeto Coffee shop utilizada para guardar dados e para os clientes conseguirem criar seu próprio café",
       "tecnologias":["java","spring-boot"],
-      "link":""
+      "link":"https://github.com/SavioHaistem/CoffeBuilderAPI"
     }
   ]
 }
